[gd_scene load_steps=6 format=3 uid="uid://dikcn6vh82w0j"]

[ext_resource type="Script" path="res://widgets/tuner_slider/TunerSlider.gd" id="1_7j2t2"]
[ext_resource type="Shader" path="res://widgets/tuner_slider/TunerSlider.gdshader" id="2_go0hr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8md04"]
content_margin_left = 8.0
content_margin_right = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e3ow0"]
resource_local_to_scene = true
shader = ExtResource("2_go0hr")
shader_parameter/slider_size = Vector2(80, 28)
shader_parameter/knob_position = -1.0
shader_parameter/rail_safezone = 0.6
shader_parameter/rail_thickness = 0.25
shader_parameter/rail_smoothness = 0.05
shader_parameter/knob_scale = 1.2
shader_parameter/knob_width = 1.3
shader_parameter/knob_color = Color(0.499834, 0.515347, 0.622085, 1)
shader_parameter/knob_dark_color = Color(0.015147, 0.0515627, 0.087932, 1)
shader_parameter/knob_light_color = Color(1, 1, 1, 0.154)
shader_parameter/knob_light_smoothness = 0.4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_13erp"]
content_margin_left = 8.0
content_margin_right = 8.0

[node name="TunerSlider" type="MarginContainer"]
offset_right = 130.0
offset_bottom = 28.0
mouse_filter = 0
theme_type_variation = &"TunerSlider"
script = ExtResource("1_7j2t2")

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="LeftIcon" type="TextureRect" parent="Layout"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="LeftLabel" type="Label" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8md04")
text = "L"

[node name="Slider" type="Control" parent="Layout"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_e3ow0")
custom_minimum_size = Vector2(80, 28)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="RightLabel" type="Label" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_13erp")
text = "R"

[node name="RightIcon" type="TextureRect" parent="Layout"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5
